--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
             ],
             "styles": [
               "node_modules/bulma/css/bulma.css",
+              "./node_modules/lineicons/web-font/lineicons.css",
               "src/styles.scss"
             ],
             "scripts": []
