--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "@datorama/akita": "^8.0.1",
     "bulma": "^0.9.4",
+    "lineicons": "^1.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
